# NUMATyping

./: .gitignore  README.md  ds_job.slurm  env.py  load.py  numafy  numafy.py  runArray.py  runExperiments.py  runHistogram.py  runYCSB.py  ycsb_job.slurm  ycsb_jobAD.slurm  ycsb_jobB.slurm  ycsb_jobC.slurm  ycsb_jobD.slurm  ycsb_jobF.slurm  ycsb_job_AN_onA.slurm  ycsb_job_AN_onAD.slurm  ycsb_job_AN_onB.slurm  ycsb_job_AN_onC.slurm  ycsb_job_AN_onD.slurm  ycsb_job_AN_onE.slurm  ycsb_job_AN_onF.slurm
Array/: Makefile  README.md
Array/include/: Array.h  dummy.hpp
Array/src/: array.cpp  main.cpp
Array_lkfree/include/: Array.h
Array_lkfree/src/: .main.cpp.swp  array.cpp  main.cpp
Array_txn/: README.md  \
Array_txn/include/: .Array.h.swp  Array.h  umf_numa_allocator.hpp
Array_txn/include/umf/pools/: pool_jemalloc.h
Array_txn/src/: array.cpp  main.cpp
DataStructureTests/: Makefile  README.md
DataStructureTests/include/: BinaryNode.hpp  BinarySearch.hpp
DataStructureTests/src/: TestSuite.cpp  main.cpp
Exprs/Examples/: Makefile  TestSuite.cpp  main.cpp
Exprs/include/: HashTable.hpp  TestSuite.hpp
FlameGraphs/: generate_ycsb_fg.py
Graphs/: bar_plot_ycsb.py  plot_bst.py  plot_ycsb.py
Graphs/AN_on/: bst_3000000_240_experiments.csv  ycsb_A-50-50-50_A-100-0-50.csv  ycsb_A-50-50-50_D-100-0-50.csv
Histogram/: Makefile  README.md
Histogram/include/: HashNode.hpp  HashTable.hpp  Histogram.hpp
Histogram/src/: Histogram.cpp  Makefile  main.cpp
Histogram/util/: timing.h
Output/DataStructureTests/: Makefile
Output/DataStructureTests/include/: BinaryNode.hpp  BinarySearch.hpp  Node.hpp  TestSuite.hpp
Output/DataStructureTests/src/: TestSuite.cpp  main.cpp
Output/Histogram/: README.md
Output/Histogram/include/: HashNode.hpp  HashTable.hpp  Histogram.hpp
Output/Histogram/src/: Histogram.cpp  Makefile  test_hashtable.cpp
Output/Histogram/util/: timing.h
Perfs/: .list.txt.swo  generate_array_perf.py  generate_ycsb_perf.py  perf_stat.py
Perfs/AN_on/array/: numa_numa_1000_1000000_perf.csv  numa_numa_1000_1000000_perf.data  numa_numa_1000_2000000_perf.csv  numa_numa_1000_2000000_perf.data  reverse_numa_1000_1000000_perf.csv  reverse_numa_1000_1000000_perf.data  reverse_numa_1000_2000000_perf.csv  reverse_numa_1000_2000000_perf.data
Perfs/LocalRemoteStat/: local_remote_regular_regular.csv
Perfs/plots/: plot_accesses.py
Result/: BST_Transactions.csv  bst.csv  bst_Transactions_new.csv  histogram_experiments.csv  ll.csv  plot_histogram.py  queue.csv  stack.csv  transaction.csv
Result/AN_off/: bst_Transactions.csv  histogram_experiments.csv
Result/AN_on/: bst_Transactions.csv
Result/plots/: plot_ops.py
allocator_test/: Makefile
allocator_test/include/: umf_numa_allocator.hpp
allocator_test/src/: main.cpp
numa-clang-tool/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  run.sh
numa-clang-tool/cmake/: FindLLVM.cmake
numa-clang-tool/input/Exprs/: README.md
numa-clang-tool/input/Exprs/Examples/: Makefile  TestSuite.cpp
numa-clang-tool/output/Exprs/include/: BinarySearch.hpp  LinkedList.hpp  Node.hpp
numa-clang-tool/output2/Exprs/include/: BinaryNode.hpp  Queue.hpp  Stack.hpp
numa-clang-tool/src/: CMakeLists.txt  Makefile  main.cc
numa-clang-tool/src/actions/: castFrontendAction.cc  castFrontendAction.h  recurseFrontendAction.cc  recurseFrontendAction.h
numa-clang-tool/src/casting/: reinterprete_cast.cc  reinterprete_cast.h
numa-clang-tool/src/consumer/: castConsumer.cc  castConsumer.h  recurseConsumer.cc  recurseConsumer.h
numa-clang-tool/src/numafy/: new_allocs.cc  new_allocs.h
numa-clang-tool/src/transformer/: CastNumaAlloc.cc  CastNumaAlloc.h  RecursiveNumaTyper.cc  RecursiveNumaTyper.h  transformer.h
numa-clang-tool/src/utils/: utils.cc  utils.h
numaLib/: numathreads.hpp  numatype.hpp  umf_numa_allocator.hpp
unified-memory-framework/: CMakeLists.txt
unified-memory-framework/src/: CMakeLists.txt
unified-memory-framework/src/pool/: pool_jemalloc.c
ycsb/: Makefile  README.md  todo.md  ycsb_hashtable.cpp
ycsb/include/: HashNode.hpp  HashTable.hpp  ttas.hpp  ycsb_benchmark.hpp  ycsbutils.h  zipfian_generator.h
ycsb/src/: .main.cpp.swp  Makefile  main.cpp  runner  ycsb_benchmark.cpp  ycsb_hashtable  ycsb_hashtable.cpp
ycsb/zipf_base/: Makefile  requirements
ycsb/zipf_base/src/: ycsbutils.cpp  zipf_gen.cpp  zipfian_generator.cpp  zipfian_generator.h
